alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
  - name: http
    port: 9093
    targetPort: 9093
    nodePort: 30035
